<resources>
    <string name="app_name">Arbeitsbericht</string>
    <string name="reportid">Berichtsnr: %1$s</string>
    <string name="creationdate">Erstellt am: %1$s</string>
    <string name="changedate">Letzte Änderung am: %1$s</string>
    <string name="client_project">Kunde / Projekt</string>
    <string name="date">Datum</string>
    <string name="unfold">Bereich aufklappen</string>
    <string name="extra">Zusatz</string>
    <string name="back">Zurück</string>
    <string name="bill_address">Rechnungsadresse</string>
    <string name="name">Name</string>
    <string name="street">Strasse / Hausnummer</string>
    <string name="zip">PLZ</string>
    <string name="city">Ort</string>
    <string name="notes">Notizen</string>
    <string name="saved_reports">Arbeitsberichte</string>
    <string name="create_new_report">Neuer Bericht</string>
    <string name="create_new_client">Neuer Kunde</string>
    <string name="unknown">Unbekannt</string>
    <string name="send">Senden</string>
    <string name="_new">Neu</string>
    <string name="filter">Filter</string>
    <string name="settings">Einstellungen</string>
    <string name="employee_name">Mitarbeiter</string>
    <string name="device_name">Gerätename</string>
    <string name="mail_receiver">E-Mail Empfänger</string>
    <string name="save">Speichern</string>
    <string name="preview">Voransicht</string>
    <string name="free_id">Nächste freie Berichtsnr</string>
    <string name="workstart">Anfangszeit</string>
    <string name="workend">Endzeit</string>
    <string name="workpause">Pausezeit</string>
    <string name="workdrive">Fahrzeit</string>
    <string name="worktimes">Arbeitszeiten</string>
    <string name="workitems">Durchgeführte Arbeiten</string>
    <string name="material">Material</string>
    <string name="unit">Einheit</string>
    <string name="worktime">Arbeitszeit</string>
    <string name="driveduration">Fahrzeit</string>
    <string name="distance">Entfernung [km]</string>
    <string name="del_confirmation">Sind sie sich sicher, dass sie das Element löschen wollen?</string>
    <string name="del_signature">Sind sie sich sicher, dass sie die Unterschrift löschen wollen?</string>
    <string name="overwrite_confirmation">Der Bericht exisitiert bereits als PDF, soll er überschrieben werden?</string>
    <string name="send_fail">Senden fehlgeschlagen!</string>
    <string name="pdf_viewer_fail">Konnte PDF Renderer nicht generieren</string>
    <string name="sharing">Bericht teilen ...</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="close">Schliessen</string>
    <string name="versions">Versionen</string>
    <string name="nouse">Nicht verwenden</string>
    <string name="work_item">Durchgeführte Arbeit</string>
    <string name="amount">Anzahl</string>
    <string name="employee_signature">Unterschrift Auftragnehmer</string>
    <string name="client_signature">Unterschrift Auftraggeber</string>
    <string name="clear">Löschen</string>
    <string name="summary">Zusammenfassung</string>
    <string name="about">Über</string>
    <string name="lump_sum_define">Pauschalen definieren</string>
    <string name="client_manage">Kunden verwalten</string>
    <string name="lump_sum">Pauschale</string>
    <string name="no_lump_sum_defined">Keine Pauschalen bisher definiert. Bitte erst im Menü Einträge anlegen</string>
    <string name="photo">Fotos</string>
    <string name="description">Beschreibung</string>
    <string name="comment">Bemerkung</string>
    <string name="editor">Bearbeiten</string>
    <string name="lump_sum_from_server">Pauschalendefinition von einem server beziehen</string>
    <string name="sftp_path_lump_sum">Pfad zur Pauschalendatei auf dem SFTP server</string>
    <string name="crashlog_enable">Im Falle eines Absturzes Bericht an Autor senden</string>
    <string name="always_portrait">Bildschirm immer im Hochformat</string>
    <string name="do_not_show_again">Diese Meldung nicht wieder anzeigen</string>
    <string name="in_work">In Arbeit</string>
    <string name="on_hold">Unterbrochen</string>
    <string name="done">Erledigt</string>
    <string name="archived">Archiviert</string>
    <string name="delete">Löschen</string>
    <string name="set_in_work">Auf In Arbeit setzen</string>
    <string name="set_done">Auf Erledigt setzen</string>
    <string name="set_on_hold">Auf Unterbrochen setzen</string>
    <string name="archive">Archivieren</string>
    <string name="duplicate">Duplizieren</string>
    <string name="db_loading">Berichte werden geladen</string>
    <string name="select_photo">Foto auswählen</string>
    <string name="scale_photo">Fotos skalieren (reduziert Dateigröße des Berichts)</string>
    <string name="add">Hinzufügen</string>
    <string name="sort">Sortieren</string>
    <string name="add_employee">Mitarbeiter hinzufügen</string>
    <string name="filter_reports">Berichtsfilter einstellen</string>
    <string name="screen_orientation_info">Die App unterstützt die Benutzung jetzt auch im Querformat. Dies kann hier oder in den Einstellungen deaktiviert werden.</string>
    <string name="apply">Anwenden</string>
    <string name="auto_use">Automatisch übernehmen</string>
    <string name="client_list">Kunde auswählen</string>
    <string name="presets_active_notification">Kundenvorgabewerte aktiv!!</string>
    <string name="preset_used_drive_distance">"Vorgabe für Fahrzeit (%1$s) und Entfernung (%2$d km) von Kundendaten übernommen"</string>
    <string name="preset_used_drive">"Vorgabe für Fahrzeit (%1$s) von Kundendaten übernommen"</string>
    <string name="preset_used_distance">"Vorgabe für Entfernung (%1$d km) von Kundendaten übernommen"</string>

    <!-- Configuration -->
    <string name="reportid_change_conf">Die laufende Nummer wurde geändert</string>
    <string name="reportid_change_conf_detail">Das kann zu doppelter Vergabe von Berichtsnummern führen, sind Sie sich sicher?</string>
    <string name="report_id_pattern">Vorlage Berichtsnummer</string>
    <string name="lump_sum_load">Pauschalen aus Datei laden</string>
    <string name="only_jpeg_supported">Es werden nur JPEG (.jpg oder .jpeg) Dateien unterstützt</string>
    <string name="other">Weiteres</string>
    <string name="font">Schrift</string>
    <string name="fontsize">Schriftgröße</string>
    <string name="use">Verwenden</string>
    <string name="logo">Logo</string>
    <string name="use_logo">Logo verwenden</string>
    <string name="footer">Fusszeile</string>
    <string name="use_footer">Fusszeile verwenden</string>
    <string name="use_internal_pdf">Eigene PDF Vorschau</string>
    <string name="logowidth">Logobreite [mm]</string>
    <string name="footerwidth">Fusszeilenbreite [mm]</string>

    <!-- SFTP related -->
    <string name="sftp_settings">SFTP</string>
    <string name="sftp_host">SFTP server Adresse</string>
    <string name="sftp_port">SFTP server Port</string>
    <string name="sftp_path_odf">Pfad zur ODF Vorlage (.ott Datei) auf dem SFTP server</string>
    <string name="sftp_path_logo">Pfad zu einem JPEG Logo auf dem SFTP server</string>
    <string name="sftp_path_footer">Pfad zu einer JPEG Fusszeile auf dem SFTP server</string>
    <string name="sftp_user">Benutzername (user name) SFTP server</string>
    <string name="sftp_pwd">Passwort SFTP server</string>
    <string name="file_load">Vom Gerät</string>
    <string name="sftp_file_load">Über SFTP</string>
    <string name="sftp_connect_error">Verbindung zum SFTP Server fehlgeschlagen: Fehlermeldung: %1s</string>
    <string name="sftp_connect_done">Verbindung zum SFTP Server war erfolgreich</string>
    <string name="sftp_file_get_error">Datei konnte nicht geladen werden: </string>
    <string name="no_internet_access_abort">Berechtigungen abgelehnt, die App kann die Datei ohne Netzwerkzugriff nicht laden</string>
    <string name="lump_sums_found">%1d Pauschalen gefunden. Sollen diese übernommen werden?</string>
    <string name="no_lump_sums_found">Keine Pauschalen gefunden. Sollen alle vorhandenen glöscht werden?</string>
    <string name="sftp_connect_test">Testen</string>
    <string name="getfile_error">Fehler beim Laden der Datei</string>
    <string name="odf_file_choose">ODF Vorlage auswählen</string>
    <string name="logo_file_choose">Logo auswählen</string>
    <string name="lump_sum_file_choose">Pauschalendatei auswählen</string>
    <string name="footer_file_choose">Fusszeile auswählen</string>
    <string name="num_pixel">Anzahl Pixel kürzere Seite</string>
    <string name="width_mm">Breite [mm]</string>

    <!-- ODF / PDF generation -->
    <string name="cannot_createdocs_dir">Konnte erforderlichen Ordner für die Berichtsdatei nicht erstellen</string>
    <string name="report_exists_overwrite">Der Bericht exisitiert bereits, soll er überschrieben werden?</string>
    <string name="report_create_fail_perm">Konnte Berichtsdatei wegen fehlender Berechtigungen nicht erstellen</string>
    <string name="report_create_fail">Konnte Berichtsdatei nicht erstellen</string>
    <string name="report_create_fail_unknown">Konnte Berichtsdatei nicht erstellen. Grund unbekannt</string>
    <string name="no_xdf_viewer">Es ist keine App installiert, die das %1$s Dokument anzeigen kann</string>
    <string name="odf_output">ODT-Ausgabe (.odt, unterstützt eigene Vorlagen)</string>
    <string name="pdf_output">PDF-Ausgabe (.pdf)</string>
    <string name="xlsx_output">Excel-Ausgabe (.xlsx)</string>
    <string name="select_output">Beim Versenden auswählen</string>
    <string name="status_add_pics">Bilderdateien einfügen</string>
    <string name="status_add_base">Grunddaten einfügen</string>
    <string name="status_add_bill">Rechnungsdaten einfügen</string>
    <string name="status_add_project">Projektdaten einfügen</string>
    <string name="status_add_worktime">Arbeitszeiten einfügen</string>
    <string name="status_add_workitem">Arbeiten einfügen</string>
    <string name="status_add_lumpsum">Pauschalen einfügen</string>
    <string name="status_add_material">Materialien einfügen</string>
    <string name="status_add_photo">Fotos einfügen</string>
    <string name="status_add_signature">Unterschriften einfügen</string>
    <string name="status_done">Fertig</string>
    <string name="figure">Abbildung</string>

    <!-- Output selection dialog -->
    <string name="output_select_dialog_title">Ausgabeformat wählen</string>
    <string-array name="output_options_array">
        <item>PDF-Dokument</item>
        <item>ODT-Dokument (LibreOffice)</item>
        <item>XLSX-Dokument (MS Excel)</item>
    </string-array>

    <string name="no_mail_client">Es wurde kein E_Mail Programm gefunden</string>
    <string name="report_id_mismatch">Vorsicht! Inkonsistente laufende Nummer</string>
    <string name="report_id_mismatch_detail">Ein Bericht verwendet eine laufende Nummer, die größer ist als die aktuelle</string>

    <!-- IDs -->
    <item name="TAG_REPORT_ID" type="id" />
    <item name="TAG_CARDVIEW" type="id" />
    <item name="TAG_WORKTIME" type="id" />
    <item name="TAG_DATETEXTVIEW" type="id" />
    <item name="TAG_TIMETEXTVIEW" type="id" />
    <item name="TAG_WORKITEM" type="id" />
    <item name="TAG_LUMP_SUM" type="id" />
    <item name="TAG_MATERIAL" type="id" />
    <item name="TAG_PHOTO" type="id" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>
