<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
            android:id="@+id/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/filter_reports"
            android:textSize="24sp"
        />
    <CheckBox
            android:id="@+id/in_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_work"
            app:layout_constraintTop_toBottomOf="@id/headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <CheckBox
            android:id="@+id/on_hold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_hold"
            app:layout_constraintTop_toBottomOf="@id/in_work"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <CheckBox
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            app:layout_constraintTop_toBottomOf="@id/on_hold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <CheckBox
            android:id="@+id/archived"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/archived"
            app:layout_constraintTop_toBottomOf="@id/done"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <Button
            android:id="@+id/apply_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/archived"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/cancel_button"
            style="@style/ArbeitsberichtAppTheme.DialogButton"
            android:text="@string/apply"
            />
    <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/archived"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/apply_button"
            style="@style/ArbeitsberichtAppTheme.DialogButton"
            android:text="@string/cancel"
            />

</androidx.constraintlayout.widget.ConstraintLayout>