<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/screen_orientation_info"
    />
    <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/no_show"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/do_not_show_again"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/always_landscape"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/no_show"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/no_show"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/always_portrait"/>
    <Button
            android:id="@+id/close_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/always_landscape"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/ArbeitsberichtAppTheme.DialogButton"
            android:text="@string/close"
            />
</androidx.constraintlayout.widget.ConstraintLayout>