<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".editor_fragments.ReportFilterLayout">
    <data>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/filter_reports"
                    android:textSize="24sp"
                    />
            <CheckBox
                    android:id="@+id/in_work"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/in_work"
                    app:layout_constraintTop_toBottomOf="@id/headline"
                    app:layout_constraintLeft_toLeftOf="parent"/>
            <CheckBox
                    android:id="@+id/on_hold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/on_hold"
                    app:layout_constraintTop_toBottomOf="@id/in_work"
                    app:layout_constraintLeft_toLeftOf="parent"/>
            <CheckBox
                    android:id="@+id/done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    app:layout_constraintTop_toBottomOf="@id/on_hold"
                    app:layout_constraintLeft_toLeftOf="parent"/>
            <CheckBox
                    android:id="@+id/archived"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/archived"
                    app:layout_constraintTop_toBottomOf="@id/done"
                    app:layout_constraintLeft_toLeftOf="parent"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/project_name_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/archived"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/project_clear_button"
                    android:visibility="visible">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/project_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/client_project"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                    android:id="@+id/project_clear_button"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/archived"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/project_name_layout"
                    style="@style/ArbeitsberichtAppTheme.IconButtons"
                    app:icon="@drawable/ic_outline_disabled_by_default_24"
                    />
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/project_extra_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/project_name_layout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/project_clear_button"
                    android:visibility="visible">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/project_extra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/extra"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                    android:id="@+id/extra_clear_button"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/project_name_layout"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/project_name_layout"
                    style="@style/ArbeitsberichtAppTheme.IconButtons"
                    app:icon="@drawable/ic_outline_disabled_by_default_24"
                    />
            <Button
                    android:id="@+id/apply_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/project_extra_layout"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/cancel_button"
                    style="@style/ArbeitsberichtAppTheme.DialogButton"
                    android:text="@string/apply"
                    />
            <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/project_extra_layout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/apply_button"
                    style="@style/ArbeitsberichtAppTheme.DialogButton"
                    android:text="@string/cancel"
                    />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>