<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="cfg" type="com.stemaker.arbeitsbericht.data.Configuration"/>
    </data>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ArbeitsberichtAppTheme.CardLevel1"
            android:clickable="false">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Allgemein"
                    android:textSize="24sp"
                    />
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/config_employee_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/employee_name"
                        />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/config_device_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/device_name"
                        />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/config_report_id_pattern"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/report_id_pattern"
                        />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/config_mail_receiver"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mail_receiver"
                        android:inputType="textEmailAddress"
                        />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/crashlog_enable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/crashlog_enable"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>

